# harel-agents

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: vs-langgraph.md
research_agent/: actions.py  run.py
research_agent/machines/: agent.stm  sub_researcher.stm
research_agent/providers/: anthropic.py  base.py  groq.py  mock.py  openai.py
tests/: test_agent.py  test_live_providers.py  test_providers.py  test_run.py
