[project]
name = "harel-agents"
version = "0.1.0"
description = "Parallel Research Agent — a reference implementation of harel as a durable, statechart-driven orchestrator for LLM agent workflows."
requires-python = ">=3.11"
dependencies = [
    "harel>=0.2.1",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.25"]
openai    = ["openai>=1.0"]
dev       = ["pytest", "pytest-asyncio"]

[project.scripts]
research = "research_agent.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["research_agent"]
