[project]
name = "harel-agents"
version = "0.1.0"
description = "Parallel Research Agent — a reference implementation of harel as a durable, statechart-driven orchestrator for LLM agent workflows."
requires-python = ">=3.11"
dependencies = [
    "harel>=0.2.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.25"]
openai    = ["openai>=1.0"]
dev       = ["pytest", "harel[lsp]"]

[project.scripts]
research = "research_agent.run:main"

[tool.pytest.ini_options]
addopts = "-m 'not live'"
markers = [
    "live: hits a real LLM API, needs an API key, costs money — opt in with -m live",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["research_agent"]
